# aws_client_id_secret_hash

./: Cargo.toml  README.md
src/: main.rs
