[package]
name = "aws_client_id_secret_hash"
version = "0.1.0"
authors = ["lowhrtz <lowhrtz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.7.1"
sha2 = "0.8.1"
base64 = "0.12.0"
clap = "2.33.0"
rust-ini = "0.15.2"
